2006-09-06  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Templates/SchedulerUI/UIxCalDayTable.wox: day columns can now
	be clicked.

	* UI/Templates/SchedulerUI/UIxCalDateSelector.wox: pass the user's
	timezone ([self viewTimeZone]) to the WEMonthOverview component to
	avoid a confusion with the days.

	* UI/Templates/SchedulerUI/UIxCalInlineAptView.wox: appointments
	can now be clicked.

	* UI/WebServerResources/SchedulerUI.js: implemented a mechanism to
	imitate Sunbird's synchronization between the 3 visible views.

	* UI/SOGoUI/UIxComponent.m ([UIxComponent -selectedDate]): make
	sure the numbers in dateString are formatted so as to take 4 chars
	for the year and 2 for the day and the month, otherwise
	NSCalendarDate will return a nil date.
	([UIxComponent -applicationPath]): return a path based on the
	object's context instead of the second level in SOGo's object
	hierarchy...

2006-09-05  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/SOGoUI/UIxComponent.m ([UIxComponent -selectedDate]): add the
	user's timezone abbreviation to the date string passed as parameter to
	NSCalendarDate to generate an accurate date instance. Do the same
	when no date is specified and today is chosen.

	* UI/WebServerResources/UIxAppointmentEditor.js: convert the
	form's time values to integers before comparing them.

	* UI/Scheduler/UIxCalAptListView.m ([UIxCalAptListView -currentStartTime]) 
	([UIxCalAptListView -currentEndTime]): initialize the resulting
	dates timezone with [self viewTimeZone].

	* UI/SOGoUI/UIxComponent.m ([UIxComponent -init]): new
	"viewTimeZone" ivar destined to hold an instance of the user's
	timezone in memory.
	([UIxComponent -viewTimeZone]): take the timezone from the user's
	prefs.

2006-08-30  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Templates/SchedulerUI/UIxAppointmentEditor.wox: completely
	rearranged the layout.

	* UI/WebServerResources/UIxAppointmentEditor.js: added code to
	manage showing and hiding appointment details.
